obliterated TEACHER APIs